Use Open Sans font and fix line spacing on screen

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 #calculator {
     background-color: rgb(44, 62, 80);
+    font-family: 'Open Sans', sans-serif;
     margin: 10px auto 0 auto;
     overflow: hidden;
     width: 240px;
@@ -17,7 +18,6 @@
 #screen {
     background-color: rgb(52, 73, 94);
     color: white;
-    font-family: sans-serif;
     height: 65px;
     margin: 5px;
     padding: 0 5px 0 5px;
@@ -27,12 +27,14 @@
 
 #total {
     font-size: 46px;
+    line-height: 90%;
     overflow: hidden;
     white-space: nowrap;
 }
 
 #history {
     font-size: 10px;
+    margin-top: 8px;
     overflow: hidden;
     white-space: nowrap;
 }
